# material-didatico

./: .gitignore  README.md  arquivo_novo.txt  dados.txt  dados_professor.txt
Aulas/: Aula001a.py  aula002.py  aula02b.py  aula03.py  aula03a.py  aula03b.py  aula04.py  aula04a.py  aula04b.py  aula04c.py  aula04d.py  aula04e.py
Aulas/condicionais/: aula03b.py  aula03d.py
Aulas/designs/: builder.py  singleton.py
Aulas/dicionarios/: aula01.py
Aulas/funcoes/: aula01.py
Aulas/laco-for/: aula04.py  aula04a.py  aula04c.py  aula04e.py
Aulas/laco-while/: aula05.py  aula05b.py  aula05c.py  aula05d.py  aula05e.py  aula05f.py  aula05g.py
Aulas/tuplas/: aula01b.py  ex001.py
Exercicios/: desafios.py  ex001.py  ex010.py  ex011.py  ex012.py  ex013.py  ex014.py
Exercicios/desafios-b/: ex002.py  ex005.py  ex007.py  ex008.py  ex009.py
Exercicios/desafios-c/: ex001.py  ex002.py  ex003.py  ex004.py  ex005.py  ex006.py  ex007.py  ex008.py  ex009.py  ex010.py  ex011.py  ex012.py
Exercicios/desafios-d/: ex001.py  ex002.py  ex003.py  ex005.py  ex006.py  ex007.py  ex008.py  ex009.py  ex010.py  ex011.py  ex012.py
Exercicios/desafios-f/: ex002.py
aula_01/: pyvenv.cfg
aula_01/Scripts/: activate  activate.bat
projeto-blueprint/: app.py  requirements.txt  run.py
projetos-flask/: .gitignore  app.py  requeriments.txt
projetos-flask/projeto-tdd/: pyproject.toml  readme.md
projetos-flask/projeto-tdd/src/app/: core.py  services.py
projetos-flask/projeto-tdd/src/docs/: user_stories.md
projetos-flask/projeto-tdd/src/tests/: test_core.py  test_service.py
(+399 files in other folders)
