[tool.poetry]
name = "xp-project-base"
version = "0.1.0"
description = "Projeto base para prática de XP"
authors = ["Curso PDS"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
